@@ -39,7 +39,6 @@ import org.openide.util.NbBundle.Messages;
 import org.openide.util.actions.Presenter;
 
 import javax.swing.*;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -83,7 +82,7 @@ public class ImportTramoSpec extends SingleNodeAction<Node> implements Presenter
     }
 
     private List<Importable> getImportables() {
-        return Collections.singletonList(new Importable() {
+        return List.of(new Importable() {
 
             @Override
             public String getDomain() {
